--- a/travel-info.html
+++ b/travel-info.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container">
 
-<a href="../home"><h1>TruePool CarPool</h1></a>
+<a href="../"><h1>TruePool CarPool</h1></a>
 <h2>Travel-Information</h2>
 <form id="selection">
   <input type="text" class="form-control" id="origin-loc" placeholder="Departure"/><br />
