--- a/matching.html
+++ b/matching.html
@@ -20,7 +20,7 @@
 <body>
 <div class="container">
 
-<a href="../home"><h1>TruePool CarPool</h1></a>
+<a href="../"><h1>TruePool CarPool</h1></a>
 <h2>Matching Page</h2>
 <div>
   <!-- display requested start/end location, reguested time, trip ID -->
