--- a/travel-info.html
+++ b/travel-info.html
@@ -22,14 +22,16 @@
 <div class="container">
 
 <a href="../"><h1>TruePool CarPool</h1></a>
-<h2>Travel-Information</h2>
+<hr />
+<h2>Travel Information</h2>
 <form id="selection">
   <input type="text" class="form-control" id="origin-loc" placeholder="Departure"/><br />
   <input type="text" class="form-control" id="dest-loc" placeholder="Destination"/><br />
   Arrival Time: <input type="time" class="form-control" id="arriv-time" /><br /> <!-- Set default time now -->
-  <!-- <input type="button" class="btn btn-secondary" id="use-my-loc" value="Use My Location"><br /><br /> We can make it embedded on Departure section --><br /><br />
-  <input type="button" class="btn btn-success" id="drive-button" value="Give a ride">
-  <input type="button" class="btn btn-info" id="ride-button" value="Get a ride">
+  <!-- <input type="button" class="btn btn-secondary" id="use-my-loc" value="Use My Location"><br /><br /> We can make it embedded on Departure section -->
+  <input type="button" class="btn btn-primary" id="drive-button" value="Give a ride">
+  <input type="button" class="btn btn-success" id="ride-button" value="Get a ride">
+  <hr />
 </form>
 
 </div>
