--- a/matching.html
+++ b/matching.html
@@ -20,7 +20,7 @@
 <body>
 <div class="container">
 
-<a href="../"><h1>TruePool CarPool</h1></a>
+<a href="../"><img src="logo.gif" /></a>
 <hr />
 <h2>Matching Page</h2>
 <div id="noMatch">
