--- a/travel-info.html
+++ b/travel-info.html
@@ -21,7 +21,7 @@
 <body>
 <div class="container">
 
-<a href="../"><h1>TruePool CarPool</h1></a>
+<a href="../"><img src="logo.gif" /></a>
 <hr />
 <h2>Travel Information</h2>
 <form id="selection">
